# searchprovider-for-browser-tabs

./: README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
connector/: .gitignore  Cargo.toml  Makefile  meson.build  meson_options.txt
connector/build-aux/: cargo.sh  tabsearchproviderconnector.spec
connector/manifests/: meson.build
connector/manifests/chrome/: meson.build
connector/manifests/firefox/: manifest.json.in  meson.build
connector/manifests/flatpak-chromium/: flatpak-connector.sh.in  manifest.json.in  meson.build
connector/shell_providers/: meson.build
connector/shell_providers/gnome/: meson.build  org.me.SearchProvider.Chromium.search-provider.ini  org.me.SearchProvider.Firefox.search-provider.ini
connector/src/: main.rs  meson.build
connector/src/shell_providers/: gnome.rs  mod.rs
connector/src/webextension/: communication.rs  mod.rs  native_messaging.rs
connector/webextension/: meson.build
connector/webextension/chromium/: meson.build  org.me.searchproviderconnector.json.in
connector/webextension/firefox/: meson.build  org.me.searchproviderconnector.json.in
shellextension/: .eslintrc.dist.yml  .eslintrc.imports.yml  .eslintrc.yml  .gitignore  Makefile  package.json  rollup.config.js  tsconfig.json
shellextension/@types/: extension.d.ts  shell-gjs.ts  shell-js.d.ts
shellextension/@types/ui/: main.d.ts  remoteSearch.d.ts
shellextension/extension/: constants.ts  extension.ts  imports.ts  prefs.ts
shellextension/extension/@types/: extension.d.ts  modules.d.ts  shell-gjs.d.ts  shell.d.ts
shellextension/extension/@types/extensions/: extension.d.ts  prefs.d.ts  sharedInternals.d.ts
shellextension/extension/@types/misc/: fileUtils.d.ts  util.d.ts
shellextension/extension/@types/ui/: main.d.ts  overview.d.ts  remoteSearch.d.ts  searchController.d.ts  windowAttentionHandler.d.ts
shellextension/extension/src/: browserTabs.ts  dbusNameMonitor.ts  searchController.ts  tabSearchUtils.ts  utils.ts  webSearchProvider.ts  windowAttensionHandler.ts
shellextension/resources/: metadata.json
shellextension/resources/schemas/: org.gnome.shell.extensions.browser-tabs.gschema.xml
shellextension/src/: browserTabs.ts  extension.ts  windowAttensionHandler.ts
webextension/: .eslintrc.yml  package.json  rollup.config.js  tsconfig.json
webextension/public/chromium/: manifest.json
webextension/public/firefox/: manifest.json
webextension/resources/: chromium.manifest.json  firefox.manifest.json
webextension/src/: background.ts
webextension/webpack/: webpack.common.js
