[package]
name = "searchprovider-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "2.0.0-beta.8"
zvariant = "3.0.0"
event-listener = "2.5.1"
async-io = "*"
byteorder = "1.3.4"
serde_json = "1.0.61"
serde_repr = "0.1"
serde = { version = "1.0.118", features = ["derive"] }
