[package]
name = "tabsearchproviderconnector"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "^2.0.1"
zvariant = "^3.0.0"
byteorder = "^1.4.3"
serde_json = "^1.0.75"
serde_repr = "^0.1.10"
serde = { version = "^1.0.133", features = ["derive"] }
