option('home', type: 'string', value: '', description: 'Location of user\'s home directory.')
option('flatpak-chromium', type: 'boolean', value: false, description: 'Enable connector for flatpak chromium')
option('release-bindir', type: 'string', value: '', description: 'Location where exe will be installed')
